blueGreen/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-nginx-deployment
  labels:
    app: nginx
    stage: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      stage: green
  template:
    metadata:
      labels:
        app: nginx
        stage: green
    spec:
      containers:
      - name: nginx
        image: bitnami/nginx:1.9.7-0
        ports:
        - containerPort: 8080
