blueGreen/nginx/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-nginx-service
spec:
  selector:
    app: nginx
    stage: green 
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
