blueGreen/nginx/ingress-dual.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-virtual-host-ingress
spec:
  rules:
  - host: mynginx.apps.aws1-hive.dev06.red-chesterfield.com
    http:
      paths:
      - backend:
          serviceName: green-nginx-service
          servicePort: 80
      - backend:
          serviceName: blue-nginx-service
          servicePort: 8080
